--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   margin: 20px 170px;
 }
+
 .nav-menu {
   display: flex;
   align-items: center;
@@ -11,6 +12,7 @@
   gap: 60px;
   font-size: 20px;
 }
+
 .nav-connect {
   padding: 20px 40px;
   border-radius: 50px;
@@ -19,47 +21,55 @@
   cursor: pointer;
   transition: 0.5s;
 }
+
 .nav-connect:hover {
   transform: scale(1.05);
 }
+
 .nav-menu li {
   display: flex;
   flex-direction: column;
   gap: 5px;
   cursor: pointer;
 }
+
 .nav-menu li img {
   display: flex;
   margin: auto;
 }
+
 .anchor-link {
   text-decoration: none;
   color: white;
 }
+
+.nav-mob-open,
 .nav-mob-close {
   display: none;
 }
+
 @media (max-width: 768px) {
   .navbar {
-    margin: 2opx 50px;
+    margin: 20px 50px;
   }
+
   .nav-connect {
     display: none;
   }
+
   .nav-mob-open {
     display: block;
     position: fixed;
     right: 30px;
   }
+
   .nav-mob-close {
     display: block;
     top: 30px;
     left: 290px;
     width: 30px;
   }
-  .nav-mob-open {
-    display: none;
-  }
+
   .nav-menu {
     position: fixed;
     flex-direction: column;
@@ -68,11 +78,12 @@
     gap: 30px;
     background-color: #1f0016;
     width: 350px;
-    height: 100px;
+    height: 100vh;
     z-index: 2;
     transition: right 0.5s;
     right: -350px;
   }
+
   .nav-menu li {
     font-size: 30px;
     padding-left: 100px;
