--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -4,19 +4,25 @@
   flex-direction: column;
   gap: 30px;
 }
+
 .footer-top {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
+
 .footer-top-left {
   font-size: 20px;
   max-width: 400px;
 }
+
 .footer-top-right {
   display: flex;
   align-items: center;
   gap: 35px;
+  flex-wrap: wrap;
 }
+
 .footer-email-input {
   display: flex;
   gap: 30px;
@@ -24,7 +30,9 @@
   border-radius: 50px;
   background: #323238;
   padding-right: 80px;
+  flex: 1;
 }
+
 .footer-email-input input {
   outline: none;
   border: none;
@@ -32,7 +40,9 @@
   color: #a0a0a0;
   font-family: outfit;
   font-size: 18px;
+  flex: 1;
 }
+
 .footer-subscribe {
   font-size: 20px;
   padding: 22px 50px;
@@ -41,34 +51,64 @@
   cursor: pointer;
   transition: 0.3s;
 }
+
 .footer-bottom {
   display: flex;
   justify-content: space-between;
   font-size: 18px;
+  flex-wrap: wrap;
 }
+
 .footer-bottom-right {
   display: flex;
   gap: 50px;
   margin-bottom: 50px;
+  flex-wrap: wrap;
 }
-.footer-email-input :hover {
+
+.footer-email-input:hover {
   border: 2px solid white;
 }
-.footer-subscribe :hover {
+
+.footer-subscribe:hover {
   transform: scale(1.1);
   transition: 0.3s;
 }
+
 @media (max-width: 768px) {
   .footer {
-    margin: 50px 70px;
+    margin: 50px 20px;
   }
+
   .footer-top {
     flex-direction: column;
-    gap: 50px;
+    gap: 20px;
   }
-  .footer-bottom {
-    display: flex;
+
+  .footer-top-right {
     flex-direction: column;
-    margin-bottom: 50px;
+    gap: 20px;
+  }
+
+  .footer-email-input {
+    flex-direction: column;
+    padding: 20px;
+    padding-right: 20px;
+  }
+
+  .footer-subscribe {
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 20px;
+  }
+
+  .footer-bottom-right {
+    flex-direction: column;
+    gap: 20px;
   }
 }
